--- a/multireg/DESCRIPTION
+++ b/multireg/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: multireg
 Type: Package
-Title: What the package does (short line)
+Title: Multiple regression
 Version: 1.0
 Date: 2016-09-16
 Author: Who wrote it
