--- a/multireg/DESCRIPTION
+++ b/multireg/DESCRIPTION
@@ -3,9 +3,12 @@ Type: Package
 Title: Multiple regression
 Version: 1.0
 Date: 2016-09-16
-Author: Emma Wallentinsson, Zaida Liendeborg  
+Author: Emma Wallentinsson, Zaida Liendeborg
 Maintainer: Emma Wallentinsson <emmwa513@student.liu.se>
 Description: Calculating, blabla
 License: What license is it under?
-Imports: ggplot2
-Suggests: testthat
+Imports:
+    ggplot2
+Suggests:
+    testthat
+RoxygenNote: 5.0.1
