--- a/multireg/DESCRIPTION
+++ b/multireg/DESCRIPTION
@@ -12,5 +12,8 @@ Imports:
     ggplot2,
     gridExtra 
 Suggests:
-    testthat
+    testthat,
+    knitr,
+    rmarkdown
 RoxygenNote: 5.0.1
+VignetteBuilder: knitr
