--- a/multireg/NAMESPACE
+++ b/multireg/NAMESPACE
@@ -7,3 +7,7 @@ S3method(print,linreg)
 S3method(resid,linreg)
 S3method(summary,linreg)
 export(linreg)
+import(ggplot2)
+import(graphics)
+import(gridExtra)
+import(stats)
