--- a/multireg/DESCRIPTION
+++ b/multireg/DESCRIPTION
@@ -8,7 +8,7 @@ Maintainer: Emma Wallentinsson <emmwa513@student.liu.se>
 Description: This package contains functions for fitting linear regression
     models using the Ordinary Least Square Method.
 License: Advanced R-programmin Course
-Imports:
+Depends:
     ggplot2,
     gridExtra, 
     stats,
