Lagt till test suite för ridgereg. Fixade bug på visualize function. Lagt till på Depends.

--- a/multireg/DESCRIPTION
+++ b/multireg/DESCRIPTION
@@ -12,7 +12,11 @@ Depends:
     ggplot2,
     gridExtra, 
     stats,
-    graphics
+    graphics,
+    maps,
+    maptools,
+    sp,
+    MASS
 Suggests:
     testthat,
     knitr,
