--- a/multireg/NAMESPACE
+++ b/multireg/NAMESPACE
@@ -2,16 +2,21 @@
 
 S3method(coef,linreg)
 S3method(coef,ridgereg)
-S3method(plot,linreg)
 S3method(predict,linreg)
 S3method(predict,ridgereg)
 S3method(print,linreg)
 S3method(print,ridgereg)
 S3method(resid,linreg)
 S3method(summary,linreg)
+export(latlong2state)
 export(linreg)
+export(plot.linreg)
 export(ridgereg)
+export(visualize_airports_delay)
 import(ggplot2)
 import(graphics)
 import(gridExtra)
+import(maps)
+import(maptools)
+import(sp)
 import(stats)
