--- a/multireg/NAMESPACE
+++ b/multireg/NAMESPACE
@@ -13,6 +13,7 @@ export(linreg)
 export(plot.linreg)
 export(ridgereg)
 export(visualize_airports_delay)
+import(MASS)
 import(ggplot2)
 import(graphics)
 import(gridExtra)
